# Logger

./: CMakeLists.txt  README.md
cmake/: logger-config.cmake.in
include/: logger.h
src/: logger.c
